--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,25 @@
-PyJWT
+aniso8601==3.0.2
+certifi==2018.10.15
+chardet==3.0.4
 Click==7.0
 codeclimate-test-reporter==0.2.3
 coverage==4.3
 Flask==1.0.2
 Flask-API==1.0
 Flask-Classful==0.14.1
+Flask-Cors==3.0.6
+Flask-JWT-Extended==3.13.1
 Flask-RESTful==0.3.6
 Flask-Script==2.0.6
+gunicorn==19.9.0
 idna==2.7
 ItsDangerous==1.0.0
 Jinja2==2.10
 MarkupSafe==1.0
 marshmallow==2.16.0
+psycopg2==2.7.5
+psycopg2-binary==2.7.5
+PyJWT==1.6.4
 python-dotenv==0.9.1
 pytz==2018.5
 requests==2.20.0
