[#161365243 updated-travis-file]

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,8 @@ services:
 install:
 - pip install --upgrade pip
 - pip install -r requirements.txt
-
+before_script:
+- createdb store_manager_test
 script:
 - python manage.py migrate
 - python manage.py default_admin
