--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,15 @@ python:
 - "3.5"
 env:
 - FLASK_ENV='testing'
+- DB_HOST="localhost"
+- DB_USERNAME="postgres"
+- DB_NAME="store_manager"
 services:
 - postgresql
+postgres:
+  adapter: postrgresql
+  database: store_manager_test
+  username: postgres
 install:
 - pip install --upgrade pip
 - pip install -r requirements.txt
